--- a/qvinyl.html
+++ b/qvinyl.html
@@ -33,7 +33,7 @@
         </iframe>
     </body>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="js/index.js"></script>
+    <script src="js/qvinyl.js"></script>
 </body>
 
 </html>
