--- a/public/login.html
+++ b/public/login.html
@@ -12,10 +12,8 @@
       margin-bottom: 0;
       border: none;
     }
-    a:hover,.navbar-nav>.active > a{ color: #ed8924 !important;
-                      background: white !important; }
-    .navbar-nav>.active > a{ color: #99c1ce !important;
-                            background: white !important; }
+    a:hover,.navbar-nav>.active > a{ color: #0078ce !important; }
+    .navbar-nav>.active > a{ color: #0078ce !important; }
     @media screen and (max-width: 767px) {
       .row.content {height:auto;}
     }
@@ -86,7 +84,7 @@
 
 <div class="container-fluid text-center">
       <body background="black">
-         <center><img src="Qvinyl.png" width= "40%" height= "40%" alt="Profile image example"/></center>
+         <center><img src="logo6.png" width= "40%" height= "40%" alt="Profile image example"/></center>
          <div id="firebaseui-auth-container"></div>
       </body>
 
