--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
       margin-bottom: 0;
       border: none;
     }
-    a:hover,.navbar-nav>.active > a{ color: #0078ce !important; }
+    a:hover,.navbar-nav>.active > a{ color: #0078ce !important; background: #242424;}
     .navbar-nav>.active > a{ color: #0078ce !important; }
     @media screen and (max-width: 767px) {
       .row.content {height:auto;}
@@ -84,7 +84,7 @@
 
 <div class="container-fluid text-center">
       <body background="black">
-         <center><img src="logo6.png" width= "40%" height= "40%" alt="Profile image example"/></center>
+         <center><img src="logo6.png" width= "40%" height= "40%" style= 'margin-bottom: 5%; margin-top: 3%' alt="Profile image example"/></center>
          <div id="firebaseui-auth-container"></div>
       </body>
 
