update to new database

--- a/public/login.html
+++ b/public/login.html
@@ -30,15 +30,15 @@
    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
    <script>
      // Initialize Firebase
-     const config = {
-      apiKey: "AIzaSyDG-IPOENqC8cDOdsm683gz-MGQUYroero",
-      authDomain: "qvinyl-d222d.firebaseapp.com",
-      databaseURL: "https://qvinyl-d222d.firebaseio.com",
-      projectId: "qvinyl-d222d",
-      storageBucket: "qvinyl-d222d.appspot.com",
-      messagingSenderId: "912092441416"
-    };
-    firebase.initializeApp(config);
+     var config = {
+     apiKey: "AIzaSyCPc36j9KKh0OHwNp6jxnZAImJmdoSmdN0",
+     authDomain: "qvinyl-d19ec.firebaseapp.com",
+     databaseURL: "https://qvinyl-d19ec.firebaseio.com",
+     projectId: "qvinyl-d19ec",
+     storageBucket: "qvinyl-d19ec.appspot.com",
+     messagingSenderId: "218472401275"
+   };
+   firebase.initializeApp(config);
    </script>
 
    <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
